# senior-pomidor-server

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Grafana-Observability-PLAN.md  PLAN.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  noxfile.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
app/: __init__.py  ai_analysis.py  api.py  config.py  daily_story.py  daily_story_worker.py  grafana_cloud_exporter.py  logging_config.py  main.py  models.py  mqtt_worker.py  ollama.py  readiness.py  services.py  state_estimator_worker.py  telemetry.py  validation.py  worker_health.py  worker_healthcheck.py
app/assistant/: __init__.py  api.py  context.py  context_types.py  contracts.py  openai_realtime.py  registry.py  session.py  tools.py
app/state_estimator/: __init__.py  adapters.py  anomalies.py  calibration.py  confidence.py  config.py  decisions.py  derived_metrics.py  estimator.py  filtering.py  logging.py  models.py  persistence.py  replay.py  sensor_health.py  validation.py
config/: state_estimator_v1.yaml
config/daily_story/: environment.json  system.txt  user.txt
deploy/: senior-pomidor.env.example
deploy/scripts/: backup.sh  build-runtime-bundle.sh  database-preflight.sh  install-release.sh  provision-host.sh  restore-migration.sh
deploy/systemd/: senior-pomidor-backup-daily.timer  senior-pomidor-backup-weekly.timer  senior-pomidor-backup@.service  senior-pomidor.service
docker/grafana/provisioning/alerting/: senior-pomidor-alerts.yml
docker/grafana/provisioning/dashboards/: senior-pomidor.yml
docker/grafana/provisioning/dashboards/json/: senior-pomidor-telemetry.json
docker/grafana/provisioning/datasources/: postgres.yml
docker/postgres/: init-grafana-reader.sh
docs/: ASSISTANT.md  CAPACITY_PLANNING.md  CONTRACTS.md  EDGE_NETWORK_HEALTH.md  EDGE_NETWORK_HEALTH_v2.md  MIGRATION_WINDOWS_TO_UBUNTU.md  OLLAMA_TROUBLESHOOTING.md  OPERATIONS.md  PI_INTEGRATION_RUNBOOK.md  PUBLIC_DATA_POLICY.md  STATUS_OUTPUT_GUIDE.md  UBUNTU_HOST.md  VPD_ALERTS.md  state_estimator_spec_v_1_0_en.md  Миграция-Senior-Pomidor-Server-с-Win.md
docs/schemas/: photo-v1.schema.json  telemetry-v1.schema.json  telemetry-v2.schema.json
migrations/versions/: 0001_initial.py  0002_system_health.py  0003_telemetry_pod_readings_flat_view.py  0004_vpd_metrics.py  0005_state_estimator_v1.py  0006_action_simulations.py  0007_daily_story_runs.py  0008_daily_story_environment_context.py
tests/: __init__.py  conftest.py  test_ai_analysis.py  test_api.py  test_assistant.py  test_assistant_api.py  test_compose_config.py  test_contract_fixtures.py  test_daily_story.py  test_docker_e2e.py  test_edge_integration_fixtures.py  test_edge_readiness.py  test_grafana_cloud_compose.py  test_grafana_cloud_exporter.py  test_grafana_provisioning.py  test_lifecycle.py  test_mqtt_worker.py  test_ollama.py  test_public_status.py  test_release_assets.py  test_telemetry_view.py  test_validation.py
tests/fixtures/contracts/: photo_v1.json  telemetry_v1.json  telemetry_v2.json
tests/fixtures/edge_integration/: photo_http_request.json  telemetry_mqtt.json
tests/state_estimator/: test_api.py  test_config_replay.py  test_decisions.py  test_derived_metrics.py  test_estimator.py  test_worker.py
tests/state_estimator/fixtures/: hot_high_vpd.json  humid_low_vpd.json  impossible_soil_jump.json  missing_one_pod.json  normal_two_pods.json  stale_required_telemetry.json
tools/: __init__.py  analyze_recent_photos.py  backup_data.ps1  check_photo_storage.py  edge_readiness.py  lifecycle.py  pi_camera_smoke_test.py  public_status.py  state_estimator_audit.py  test_daily_story_ollama.py
