[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "senior-pomidor-server"
version = "0.1.0"
description = "Core server for Senior Pomidor telemetry ingestion and read APIs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13",
    "fastapi>=0.115",
    "paho-mqtt>=2.1",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.12",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
dev = [
    "bandit[toml]>=1.7.10",
    "coverage[toml]>=7.6",
    "httpx>=0.27",
    "mypy>=1.13",
    "nox>=2024.10.9",
    "pip-audit>=2.7",
    "pre-commit>=4.0",
    "pytest>=8.3",
    "ruff>=0.8",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "error",
    'ignore:Using `httpx` with `starlette.testclient` is deprecated; install `httpx2` instead',
]

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "A",
    "B",
    "C4",
    "DTZ",
    "E",
    "F",
    "I",
    "N",
    "PIE",
    "PT",
    "RET",
    "RUF",
    "S",
    "SIM",
    "UP",
]
ignore = [
    "B008", # FastAPI dependency injection intentionally uses Depends in defaults.
    "S104", # Docker/LAN service binding is intentional for this server.
]

[tool.ruff.lint.per-file-ignores]
"app/main.py" = [
    "E501", # Embedded dashboard HTML/JS is clearer as literal text.
]
"tests/**" = [
    "N806", # tests use SQLAlchemy SessionLocal naming convention locally.
    "S101", # pytest assertions are expected in tests.
    "S105", # tests use documented local-only credentials.
    "S106", # tests use documented local-only credentials.
    "S603", # Docker E2E tests call fixed local Docker commands.
    "S607", # Docker E2E tests call fixed local Docker commands.
    "S608", # Docker E2E test SQL uses a fixed table allow-list.
]
"tools/**" = [
    "N806", # tools use SQLAlchemy SessionLocal naming convention locally.
    "S603", # tool subprocess calls use fixed argument lists.
]
"migrations/**" = [
    "E501", # Alembic-generated table definitions are clearer without manual wrapping.
    "S608", # Alembic migrations use static SQL strings.
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
explicit_package_bases = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "app.*"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disable_error_code = ["arg-type"]

[[tool.mypy.overrides]]
module = "tools.pi_camera_smoke_test"
disable_error_code = ["attr-defined"]

[[tool.mypy.overrides]]
module = [
    "cv2",
    "picamera2",
]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = [
    "B101", # assert is valid in tests and smoke-check style tooling.
    "B104", # Docker/LAN service binding is intentional for this server.
]
